--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22'  # Node.js 버전
+          node-version: '20'  # Node.js 버전
 
       - name: Install dependencies
         run: npm install
@@ -25,6 +25,9 @@ jobs:
         run: npm run build
 
       - name: Deploy to GitHub Pages
-        run: npm run deploy
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: peaceiris/actions-gh-pages@v4  # 최신 버전 사용
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build  # 빌드 결과물 경로 설정
+          publish_branch: gh-pages  # 배포할 브랜치를 설정
+          force_orphan: true
